--- a/styles/style_calibracion2023.css
+++ b/styles/style_calibracion2023.css
@@ -432,6 +432,28 @@ border: none;
 /* --tam_texto:12px;*/
 --tam_texto:12px;
 }
+.leaflet-marker-icon ._Activo{
+    position: relative;
+    color:rgb(10, 0, 0);
+    top: -42px;
+    /*background-color: rgb(77, 118, 252);*/
+    background-color: rgb(78, 252, 171);
+    border-radius: 5px;
+    border-style: solid;
+    border-color: black;
+    border-width: 1px;
+    font-size: var(--tam_texto);
+    /*tamaño del cuadro de texto*/
+    width: calc(var(--tam_texto) + 30px);
+    min-width: 60px;
+    /*max-width: var(--max-width);*/
+    margin-left: -18px;
+    text-align: center;
+    
+}
+
+
+
 .leaflet-marker-icon .numero{
 position: relative;
 color:rgb(255, 255, 255);
